# apex-terminal

./: .gitignore  AGENT_BRIEF.md  AGENT_CONTEXT.md  README.md  SPEC_APEX_DATA_INTEGRATION.md  SPEC_BACKTESTING_AUTOMATION.md  SPEC_DATA_RESEARCH_PORTFOLIO.md  TRADING_UX_SPEC.md  build-native.sh  imgui.ini  index.html  package-lock.json  package.json  vite.config.ts
apex-native/: Cargo.toml  build.rs
apex-native/src/: main.rs
apex-terminal-designmode/: Cargo.toml  build.rs  design.toml
apex-terminal-designmode/src/: inspector.rs  lib.rs  main.rs  tokens.rs  watcher.rs
src-tauri/: .gitignore  Cargo.toml  GPU_BLUR_NOTES.md  apex-icon-only.rc  apex-native.manifest  apex-native.rc  build.rs  design.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: chart_db_smoke.rs  drawing_db_smoke.rs  font_showcase.rs  seed_watchlist_universes.rs  xol_export_import_smoke.rs
src-tauri/examples/fonts/: README.md
src-tauri/migrations/: 001_chart_state.sql  002_watchlist_state.sql
src-tauri/permissions/: default.toml
src-tauri/src/: bar_cache.rs  crypto_feed.rs  data.rs  design_inspector.rs  design_tokens.rs  drawing_db.rs  drawings.rs  ib_ws.rs  lib.rs  main.rs  monitoring.rs  native_main.rs
src-tauri/src/apex_data/: mod.rs
src-tauri/src/chart/: mod.rs
src-tauri/src/chart/renderer/: commands.rs  gpu.rs  mod.rs
src-tauri/src/chart/renderer/io/: fetch.rs  mod.rs
src-tauri/src/chart/renderer/render/: mod.rs  pane.rs
src-tauri/src/chart/renderer/trading/: order_manager.rs
src-tauri/src/chart/renderer/ui/: chart_widgets.rs  mod.rs  pane.rs  style.rs  toolbar.rs
src-tauri/src/chart/renderer/ui/chrome/: mod.rs  modal.rs  painter_chrome.rs  painter_pane.rs  pane.rs
src-tauri/src/chart/renderer/ui/command_palette/: execute.rs  matcher.rs  mod.rs  registry.rs  render.rs
src-tauri/src/chart/renderer/ui/components/: action_button.rs  context_menu.rs  design_mode_panel.rs  dom_action.rs  frames.rs  frames_widget.rs  hairlines.rs  headers_widget.rs  inputs.rs  menus.rs  metrics.rs  mod.rs  motion.rs  panels.rs  perf_hud.rs  pills.rs  pills_widget.rs  semantic_label.rs  status.rs  tabs.rs  text.rs  toasts.rs
src-tauri/src/chart/renderer/ui/components_extra/: mod.rs
src-tauri/src/chart/renderer/ui/foundation/: interaction.rs  mod.rs  shell.rs  text_style.rs  tokens.rs  variants.rs
src-tauri/src/chart/renderer/ui/inputs/: buttons.rs  filter_pill.rs  form.rs  inputs.rs  mod.rs  nmf_toggle.rs
src-tauri/src/chart/renderer/ui/lists/: mod.rs
src-tauri/src/chart/renderer/ui/panels/: alerts_panel.rs  analysis_panel.rs  apex_diagnostics.rs  connection_panel.rs  dashboard_pane.rs  discord_panel.rs  dom_panel.rs  feed_panel.rs  heat_panel.rs  heatmap_pane.rs  journal_panel.rs  mod.rs  news_panel.rs  object_tree.rs  orders_panel.rs  playbook_panel.rs  plays_panel.rs  portfolio_pane.rs  research_panel.rs  rrg_panel.rs  scanner_panel.rs  screenshot_panel.rs  script_panel.rs  seasonality_panel.rs  settings_panel.rs  side_panel.rs  signals_panel.rs  spread_panel.rs  spreadsheet_pane.rs  tape_panel.rs  watchlist_panel.rs  widget_gallery.rs
src-tauri/src/chart/renderer/ui/tools/: hotkey_editor.rs  indicator_editor.rs  mod.rs  option_quick_picker.rs  order_edit_dialog.rs  order_entry_panel.rs  (+4 more)
src-tauri/src/chart/state/: annotations.rs  commands.rs  drawings.rs  extension_bag.rs  file_io.rs  indicators.rs  mod.rs  style_table.rs  templates.rs  viewport.rs
src-tauri/src/chart/state/codec/: db.rs  mod.rs  xol.rs
src-tauri/src/chart_renderer/: commands.rs  compute.rs  gpu.rs  mod.rs  trading.rs  types.rs
src-tauri/src/chart_renderer/trading/: mod.rs  order_manager.rs
src-tauri/src/chart_renderer/ui/: alerts_panel.rs  analysis_panel.rs  apex_diagnostics.rs  chart_pane.rs  chart_widgets.rs  command_palette.rs  components.rs  components_extra.rs  connection_panel.rs  dashboard_pane.rs  design_preview_pane.rs  discord_panel.rs  dom_panel.rs  drawings.rs  feed_panel.rs  heatmap_pane.rs  hotkey_editor.rs  indicator_editor.rs  indicators.rs  journal_panel.rs  mod.rs  news_panel.rs  object_tree.rs  option_quick_picker.rs  orders.rs  orders_panel.rs  oscillators.rs  overlay_manager.rs  painter_chrome.rs  pane.rs  panels.rs  picker.rs  playbook_panel.rs  plays_panel.rs  portfolio_pane.rs  research_panel.rs  rrg_panel.rs  scanner_panel.rs  screenshot_panel.rs  script_panel.rs  (+12 more)
src-tauri/src/chart_renderer/ui/command_palette/: execute.rs  mod.rs  registry.rs  render.rs
src-tauri/src/chart_renderer/ui/components/: frames.rs  headers.rs  labels.rs  mod.rs  pills.rs
src-tauri/src/chart_renderer/ui/components_extra/: chips.rs  dom_action.rs  header_buttons.rs  inputs.rs  mod.rs  sortable_headers.rs  top_nav.rs
src-tauri/src/chart_renderer/ui/widgets/: buttons.rs  context_menu.rs  form.rs  frames.rs  headers.rs  icons.rs  inputs.rs  layout.rs  menus.rs  mod.rs  modal.rs  painter_pane.rs  pane.rs  perf_hud.rs  pills.rs  select.rs  status.rs  tabs.rs  text.rs  toolbar.rs
src-tauri/src/data/: bar_cache.rs  mod.rs
src-tauri/src/data/feeds/: crypto_feed.rs  discord.rs  ib_ws.rs  mod.rs  signals_feed.rs
src-tauri/src/data/feeds/apex_data/: config.rs  debug_log.rs  live_state.rs  rest.rs  types.rs  ws.rs
src-tauri/src/foundation/: data_types.rs  design_inspector.rs  design_tokens.rs  frame_profiler.rs  mod.rs
src-tauri/src/persistence/: drawing_db.rs  mod.rs  watchlist_db.rs
src-tauri/src/ui_kit/: icons.rs  mod.rs  symbols.rs  theme.rs  widgets.rs
src-tauri/src/ui_kit/widgets/: THIRD_PARTY.md  alert.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  checkbox.rs  color_picker.rs  context_menu.rs  date_picker.rs  hover_card.rs  input.rs  kbd.rs  label.rs  link.rs  mod.rs  modal.rs  motion.rs  pagination.rs  placement.rs  polished_label.rs  popover.rs  progress.rs  radio.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  shadow.rs  shadow_pipeline.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  stepper.rs  switch.rs  table.rs  tabs.rs  tag.rs  (+7 more)
src-tauri/src/watchlist/: mod.rs  refresh.rs
src-tauri/src/watchlist/codec/: db.rs  mod.rs
(+243 files in other folders)
