[package]
name = "_scaffold"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "apex-native"
path = "src/native_main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rmp-serde = "1.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Native GPU chart renderer
wgpu = "24"
winit = "0.30"
pollster = "0.4"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
egui-phosphor = { version = "0.9", features = ["regular", "bold"] }

# Bar data caching
redis = { version = "0.27", features = ["tokio-comp"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }

# System monitoring (NVML FFI)
libloading = "0.8"

